# luminous-server

./: .gitignore  Dockerfile  docker-compose.yml  pytest.ini  requirements.txt  run_server_dev.py  setup.cfg  setup.py  supervisord.conf
files/: run_server_dev.py  supervisord.conf
luminous_photos/: apps.py  models.py  serializers.py  views.py
luminous_photos/management/commands/: extract_photo_info_from_exif.py  update_photos.py
luminous_photos/migrations/: 0001_initial.py
luminous_project/: manage.py  pkg.py  tasks.py  urls.py  wsgi.py
luminous_project/settings/: base.py  dev.py  prod.py
tests/: test_views.py
