[metadata]
name = luminous-server
author = Christian Boelsen
author_email = christianboelsen+github@gmail.com
summary = Photo server
description-file = README.md
home-page = https://github.com/cboelsen/luminous-server
license = GPLv3
keywords = photos, django
install_requires = [],
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    luminous_photos
    luminous_project

[entry_points]
console_scripts =
    luminous-server = luminous_project.manage:launch_web_app

[wheel]
universal = 1
